// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SOPLibrary RTL snapshots (P13) > renders SOPLibrary in LTR 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      SOP Library
    </h1>
    <div
      class="flex flex-wrap items-center gap-3"
    >
      <div
        class="relative flex items-center min-w-[200px] flex-1"
      >
        <input
          aria-label="Search SOPs..."
          class="flex border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-full pe-11 h-9 rounded-full"
          data-slot="input"
          dir="auto"
          placeholder="Search SOPs..."
          type="text"
          value=""
        />
        <button
          aria-label="Search"
          class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/80 size-6 [&_svg:not([class*='size-'])]:size-3 absolute end-1.5 top-1/2 -translate-y-1/2"
          data-size="icon-xs"
          data-slot="button"
          data-variant="default"
          type="button"
        >
          <svg
            data-testid="icon-search"
          />
        </button>
      </div>
      <div
        class="relative"
      >
        <select
          aria-label="Filter by category"
          class="h-9 w-full appearance-none rounded-full border border-border bg-background text-foreground ps-3 pe-9 text-sm"
        >
          <option
            value="ALL"
          >
            All
          </option>
          <option
            value="HEMATOLOGY"
          >
            Hematology
          </option>
          <option
            value="CHEMISTRY"
          >
            Chemistry
          </option>
          <option
            value="MICROBIOLOGY"
          >
            Microbiology
          </option>
          <option
            value="GENERAL_LAB_SAFETY"
          >
            General Lab Safety
          </option>
          <option
            value="OTHER"
          >
            Other
          </option>
        </select>
        <svg
          data-testid="icon-chevron-down"
        />
      </div>
    </div>
    <div
      class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50"
    >
      <div
        class="divide-y divide-border"
        role="list"
      >
        <button
          class="flex w-full items-start justify-between gap-3 px-4 py-3 text-start transition-colors hover:bg-muted/50"
        >
          <div
            class="min-w-0 flex-1"
          >
            <h3
              class="text-base font-semibold text-foreground"
            >
              Snap SOP
            </h3>
            <div
              class="mt-1 flex flex-wrap items-center gap-2 text-xs text-muted-foreground"
            >
              <span
                class="rounded bg-muted px-2 py-0.5 font-medium"
              >
                Hematology
              </span>
              <span>
                v
                1.0.0
              </span>
              <span>
                1/14/2026
              </span>
            </div>
          </div>
          <div
            class="flex-shrink-0"
          >
            <span
              class="inline-flex items-center rounded-full border font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-warning/10 text-warning px-2.5 py-0.5 text-xs"
              data-slot="badge"
            >
              Review Required
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SOPLibrary RTL snapshots (P13) > renders SOPLibrary in RTL 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      SOP Library
    </h1>
    <div
      class="flex flex-wrap items-center gap-3"
    >
      <div
        class="relative flex items-center min-w-[200px] flex-1"
      >
        <input
          aria-label="Search SOPs..."
          class="flex border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-full pe-11 h-9 rounded-full"
          data-slot="input"
          dir="auto"
          placeholder="Search SOPs..."
          type="text"
          value=""
        />
        <button
          aria-label="Search"
          class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/80 size-6 [&_svg:not([class*='size-'])]:size-3 absolute end-1.5 top-1/2 -translate-y-1/2"
          data-size="icon-xs"
          data-slot="button"
          data-variant="default"
          type="button"
        >
          <svg
            data-testid="icon-search"
          />
        </button>
      </div>
      <div
        class="relative"
      >
        <select
          aria-label="Filter by category"
          class="h-9 w-full appearance-none rounded-full border border-border bg-background text-foreground ps-3 pe-9 text-sm"
        >
          <option
            value="ALL"
          >
            All
          </option>
          <option
            value="HEMATOLOGY"
          >
            Hematology
          </option>
          <option
            value="CHEMISTRY"
          >
            Chemistry
          </option>
          <option
            value="MICROBIOLOGY"
          >
            Microbiology
          </option>
          <option
            value="GENERAL_LAB_SAFETY"
          >
            General Lab Safety
          </option>
          <option
            value="OTHER"
          >
            Other
          </option>
        </select>
        <svg
          data-testid="icon-chevron-down"
        />
      </div>
    </div>
    <div
      class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50"
    >
      <div
        class="divide-y divide-border"
        role="list"
      >
        <button
          class="flex w-full items-start justify-between gap-3 px-4 py-3 text-start transition-colors hover:bg-muted/50"
        >
          <div
            class="min-w-0 flex-1"
          >
            <h3
              class="text-base font-semibold text-foreground"
            >
              Snap SOP
            </h3>
            <div
              class="mt-1 flex flex-wrap items-center gap-2 text-xs text-muted-foreground"
            >
              <span
                class="rounded bg-muted px-2 py-0.5 font-medium"
              >
                Hematology
              </span>
              <span>
                v
                1.0.0
              </span>
              <span>
                1/14/2026
              </span>
            </div>
          </div>
          <div
            class="flex-shrink-0"
          >
            <span
              class="inline-flex items-center rounded-full border font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-warning/10 text-warning px-2.5 py-0.5 text-xs"
              data-slot="badge"
            >
              Review Required
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`SOPLibrary RTL snapshots (P13) > renders empty SOPLibrary in LTR 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      SOP Library
    </h1>
    <div
      class="flex flex-wrap items-center gap-3"
    >
      <div
        class="relative flex items-center min-w-[200px] flex-1"
      >
        <input
          aria-label="Search SOPs..."
          class="flex border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-full pe-11 h-9 rounded-full"
          data-slot="input"
          dir="auto"
          placeholder="Search SOPs..."
          type="text"
          value=""
        />
        <button
          aria-label="Search"
          class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/80 size-6 [&_svg:not([class*='size-'])]:size-3 absolute end-1.5 top-1/2 -translate-y-1/2"
          data-size="icon-xs"
          data-slot="button"
          data-variant="default"
          type="button"
        >
          <svg
            data-testid="icon-search"
          />
        </button>
      </div>
      <div
        class="relative"
      >
        <select
          aria-label="Filter by category"
          class="h-9 w-full appearance-none rounded-full border border-border bg-background text-foreground ps-3 pe-9 text-sm"
        >
          <option
            value="ALL"
          >
            All
          </option>
          <option
            value="HEMATOLOGY"
          >
            Hematology
          </option>
          <option
            value="CHEMISTRY"
          >
            Chemistry
          </option>
          <option
            value="MICROBIOLOGY"
          >
            Microbiology
          </option>
          <option
            value="GENERAL_LAB_SAFETY"
          >
            General Lab Safety
          </option>
          <option
            value="OTHER"
          >
            Other
          </option>
        </select>
        <svg
          data-testid="icon-chevron-down"
        />
      </div>
    </div>
    <div
      class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50"
    >
      <div
        class="flex min-h-[16rem] items-center justify-center"
      >
        <div
          data-testid="empty-state"
        >
          No SOPs available
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SOPLibrary RTL snapshots (P13) > renders empty SOPLibrary in RTL 1`] = `
<div>
  <div
    class="flex flex-col gap-4"
  >
    <h1
      class="text-2xl font-semibold text-foreground"
    >
      SOP Library
    </h1>
    <div
      class="flex flex-wrap items-center gap-3"
    >
      <div
        class="relative flex items-center min-w-[200px] flex-1"
      >
        <input
          aria-label="Search SOPs..."
          class="flex border border-border bg-background px-4 py-2 text-sm ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:border-primary focus-visible:ring-2 focus-visible:ring-primary/30 disabled:cursor-not-allowed disabled:opacity-50 w-full pe-11 h-9 rounded-full"
          data-slot="input"
          dir="auto"
          placeholder="Search SOPs..."
          type="text"
          value=""
        />
        <button
          aria-label="Search"
          class="group/button inline-flex shrink-0 items-center justify-center rounded-full border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/30 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 [&_svg]:pointer-events-none [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/80 size-6 [&_svg:not([class*='size-'])]:size-3 absolute end-1.5 top-1/2 -translate-y-1/2"
          data-size="icon-xs"
          data-slot="button"
          data-variant="default"
          type="button"
        >
          <svg
            data-testid="icon-search"
          />
        </button>
      </div>
      <div
        class="relative"
      >
        <select
          aria-label="Filter by category"
          class="h-9 w-full appearance-none rounded-full border border-border bg-background text-foreground ps-3 pe-9 text-sm"
        >
          <option
            value="ALL"
          >
            All
          </option>
          <option
            value="HEMATOLOGY"
          >
            Hematology
          </option>
          <option
            value="CHEMISTRY"
          >
            Chemistry
          </option>
          <option
            value="MICROBIOLOGY"
          >
            Microbiology
          </option>
          <option
            value="GENERAL_LAB_SAFETY"
          >
            General Lab Safety
          </option>
          <option
            value="OTHER"
          >
            Other
          </option>
        </select>
        <svg
          data-testid="icon-chevron-down"
        />
      </div>
    </div>
    <div
      class="overflow-hidden rounded-xl bg-card shadow-card ring-[0.65px] ring-border/50"
    >
      <div
        class="flex min-h-[16rem] items-center justify-center"
      >
        <div
          data-testid="empty-state"
        >
          No SOPs available
        </div>
      </div>
    </div>
  </div>
</div>
`;
